# BTPN

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
btpn/: __init__.py  components.py  config.py  dataset.py  detection.py  losses.py  metrics.py  model.py  utils.py  visual.py
checkpoints/: README.md  btpn_norm.npz  btpn_ssl.pt  btpn_supervised.pt  kinematic_foundation.pt  kinematic_foundation_norm.npz  yolo_keypoints.pt  yolo_segmentation.pt
configs/: btpn.yaml  detection.yaml  kinematic_foundation.yaml  paths.yaml
data/: README.md
data/sample_a/: annotations.json  label.json
data/sample_c/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
docs/: ARCHITECTURE.md  DATA_FORMAT.md  REPORTING.md  TRAINING.md
results/: all_results.json  evaluation_data_no_multiscale.npz  table2a.tex  table2b.tex  table2c.tex  uncertainty_quality_caption.json  unified_results.json
scripts/: annotate.py  evaluate.py  generate_figures.py  inference.py  make_uncertainty_figure.py  train.py
