[project]
name = "btpn"
version = "1.0.0"
description = "Bayesian Temporal Pose Networks for Uncertainty-Calibrated Laparoscopic Tool Pose Tracking"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
    "pyyaml>=6.0",
    "ultralytics>=8.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["btpn*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
